ver_3.0 (логистика + выбор сотрудника по части ФИО, добавлен вывод окна ожидания при формировании списков смет и вн. заказов)

--- a/app/src/main/res/layout/documents_headers_init_dialog.xml
+++ b/app/src/main/res/layout/documents_headers_init_dialog.xml
@@ -47,21 +47,26 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/employeeTextInputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/employee_title"
+                app:endIconContentDescription="@string/employee_title"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom"
                 app:startIconDrawable="@drawable/ic_baseline_man_24">
 
                 <AutoCompleteTextView
                     android:id="@+id/employeeTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center"
                     android:imeOptions="actionDone"
-                    android:inputType="none"
+                    android:inputType="text"
                     android:textSize="14sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
