--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -11,4 +11,24 @@
         <item>vibration</item>
         <item>nothing</item>
     </string-array>
+    <!-- Reply Preference -->
+    <string-array name="reply_entries">
+        <item>Reply</item>
+        <item>Reply to all</item>
+    </string-array>
+
+    <string-array name="reply_values">
+        <item>reply</item>
+        <item>reply_all</item>
+    </string-array>
+
+    <string-array name="printer_models">
+        <item>@string/tsc_family_printer</item>
+        <item>@string/another</item>
+    </string-array>
+
+    <string-array name="printer_models_values">
+        <item>TSC</item>
+        <item>Another</item>
+    </string-array>
 </resources>
